--- a/Design Files/Dev Board/index.html
+++ b/Design Files/Dev Board/index.html
@@ -23,7 +23,7 @@
   </head>
   <body>
     <model-viewer 
-      src="MCPM0C1104%20board%20DSBGA.glb"
+      src="MSPM0C1104%20board%20DSBGA.glb"
       alt="MSPM0C1104 Dev Board"
       auto-rotate
       camera-controls
